refactor(app and index.js): removed theme injection from index to the app.
removed material theme injection from the index to the app.js

--- a/src/client/Assets/css/app.css
+++ b/src/client/Assets/css/app.css
@@ -924,7 +924,7 @@
  .list-items {
    position: relative;
    background: white;
-   min-height: 288px;
+   height: 400px;
  }
  .list-items .select-placeholder {
    border: none;
